<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="top">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_gravity="bottom"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/truck" />

        <TextView
            android:id="@+id/soldby_label"
            style="@style/section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soldby_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/store_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/store_label"
            android:text="@string/store_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/store"
            android:linksClickable="true"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedback_score_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/feedback_score_label"
            android:text="@string/feedback_score_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/feedback_score"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popularity_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/popularity_label"
            android:text="@string/popularity_label"/>
        <com.wssholmes.stark.circular_score.CircularScoreView
            android:id="@+id/popularity"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            app:score="50"
            app:setPrimaryColor="@color/colorOrange"
            app:setSecondaryColor="@color/colorPrimary"
            app:setBackgroundColor="@color/colorWhite"
            app:setTextColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedback_star_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/feedback_star_label"
            android:text="@string/feedback_star_label"/>
        <ImageView
            android:id="@+id/feedback_star"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/star_circle" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_gravity="bottom"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ship" />
        <TextView
            style="@style/section_title"
            android:id="@+id/shipping_info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping_info_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shipping_cost_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/shipping_cost_label"
            android:text="@string/shipping_cost_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/shipping_cost"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gloabal_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/gloabal_label"
            android:text="@string/gloabal_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/gloabal"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/handling_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/handling_label"
            android:text="@string/handling_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/handling"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/condition_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/condition_label"
            android:text="@string/condition_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/condition"
            android:text="N/A" />
    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_gravity="bottom"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/truck_dump" />

        <TextView
        style="@style/section_title"
        android:id="@+id/return_policy_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_policy_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/policy_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/policy_label"
            android:text="@string/policy_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/policy"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/return_within_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/return_within_label"
            android:text="@string/return_within_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/return_within"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/return_mode_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/return_mode_label"
            android:text="@string/return_mode_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/return_mode"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shipped_by_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/section_item_title"
            android:id="@+id/shipped_by_label"
            android:text="@string/shipped_by_label"/>
        <TextView
            style="@style/section_item"
            android:id="@+id/shipped_by"
            android:text="N/A" />
    </LinearLayout>
</LinearLayout>
</ScrollView>